--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
 </head>
 
 <body>
-   
+    <h1 class="header">Kajian Pulenthirasingam</h>
+    <div class="navbar">
+        <a href="#">About me</a>
+        <a href="#">Work</a>
+        <a href="#">Contact me</a>
+        <a href="#">Resume</a>
+    </div>
+    <div class="background">
+        <img src="assets/images/kajian.JPG" alt="Portfolio Picture">
+    </div>
+    <div class="section intro">
+        <h2>About me</h2>
+        <p>My name is Kajian. I go to York University for Computer Science. I love coding!</p>
+    </div>
+    <div class="section projects">
+        <h2>Work</h2>
+        <p>Horiseon Sample Website Fix</p>
+        <img src="assets/images/horiseon sample image.jpg" alt="Sample image">
+    </div>
+    <div class="section contact">
+        <h2>Contact me</h2>
+        <div class="contact-info">
+          <div class="email">
+            <p>kajianpulenthirasingam@gmail.com</p>
+          </div>
+          <div class="phone">
+            <p>647-720-2619</p>
+          </div>
+        </div>
+      </div>
+
 </body>
 
 </html>
