--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="section projects">
         <h2>Work</h2>
-        <p>Horiseon Sample Website Fix</p>
+        <p>Horiseon Sample Website Fix Project</p>
         <img src="assets/images/horiseon sample image.jpg" alt="Sample image">
     </div>
     <div class="section contact">
