--- a/index.html
+++ b/index.html
@@ -10,24 +10,33 @@
 <body>
     <h1 class="header">Kajian Pulenthirasingam</h>
     <div class="navbar">
-        <a href="#">About me</a>
-        <a href="#">Work</a>
-        <a href="#">Contact me</a>
-        <a href="#">Resume</a>
+        <a href="#about-me">About me</a>
+        <a href="#work">Work</a>
+        <a href="#contact-me">Contact me</a>
     </div>
     <div class="background">
         <img src="assets/images/kajian.JPG" alt="Portfolio Picture">
     </div>
-    <div class="section intro">
+    <div class="section intro" id="about-me">
         <h2>About me</h2>
         <p>My name is Kajian. I go to York University for Computer Science. I love coding!</p>
     </div>
-    <div class="section projects">
-        <h2>Work</h2>
-        <p>Horiseon Sample Website Fix Project</p>
-        <img src="assets/images/horiseon sample image.jpg" alt="Sample image">
+    <div class="section projects" id="work">
+      <h2>Work</h2>
+      <p>Horiseon Sample Website Fix Project</p>
+      <a href="https://kajianpulenthirasingam.github.io/Module-Challenge-1/" target="_blank">
+        <img src="assets/images/horiseon sample image.jpg" alt="Horiseon Sample Website Fix Project" class="featured-image">
+      </a>
+      <p>Project 2</p>
+      <a href="#">
+        <img src="assets/images/placeholder.png" alt="Placeholder image">
+      </a>
+      <p>Project 3</p>
+      <a href="#">
+        <img src="assets/images/placeholder.png" alt="Placeholder image">
+      </a>
     </div>
-    <div class="section contact">
+    <div class="section contact" id="contact-me">
         <h2>Contact me</h2>
         <div class="contact-info">
           <div class="email">
