--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <a href="https://kajianpulenthirasingam.github.io/Module-Challenge-1/" target="_blank">
         <img src="assets/images/horiseon sample image.jpg" alt="Horiseon Sample Website Fix Project" class="featured-image">
       </a>
-      <p>Project 2</p>
-      <a href="#">
-        <img src="assets/images/placeholder.png" alt="Placeholder image">
+      <p>Lyk Song</p>
+      <a href="https://github.com/gurverm/lyrics-application">
+        <img src="assets/images/homepage.PNG" alt="featured-image">
       </a>
       <p>Project 3</p>
       <a href="#">
