--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="background">
         <img src="assets/images/kajian.JPG" alt="Portfolio Picture">
     </div>
-    <div class="section intro" id="about-me">
+    <div class="section" id="about-me">
         <h2>About me</h2>
         <p>My name is Kajian. I go to York University for Computer Science. I love coding!</p>
     </div>
-    <div class="section projects" id="work">
+    <div class="section" id="work">
       <h2>Work</h2>
       <p>Horiseon Sample Website Fix Project</p>
       <a href="https://kajianpulenthirasingam.github.io/Module-Challenge-1/" target="_blank">
@@ -29,14 +29,14 @@
       </a>
       <p>Lyk Song</p>
       <a href="https://github.com/gurverm/lyrics-application">
-        <img src="assets/images/homepage.PNG" alt="featured-image">
+        <img src="assets/images/homepage.PNG" alt="featured-image" >
       </a>
-      <p>Project 3</p>
-      <a href="#">
-        <img src="assets/images/placeholder.png" alt="Placeholder image">
+      <p>Eventopia</p>
+      <a href="https://github.com/PacoCasillas/Eventopia">
+        <img src="assets/images/eventopia.PNG" alt="Eventopia homepage" class="project-image">
       </a>
     </div>
-    <div class="section contact" id="contact-me">
+    <div class="section" id="contact-me">
         <h2>Contact me</h2>
         <div class="contact-info">
           <div class="email">
