Added the final project for the bootcamp

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <a href="https://github.com/PacoCasillas/Eventopia">
         <img src="assets/images/eventopia.PNG" alt="Eventopia homepage" class="project-image">
       </a>
+      <p>BudgetWise</p>
+      <a href="https://github.com/TimeBytes/Budget-Wise">
+        <img src="assets/images/budgetwise.png" alt="Budget-Wise homepage" class="project-image">
+      </a>
     </div>
     <div class="section" id="contact-me">
         <h2>Contact me</h2>
