--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </a>
       <p>BudgetWise</p>
       <a href="https://github.com/TimeBytes/Budget-Wise">
-        <img src="assets/images/budgetwise.png" alt="Budget-Wise homepage" class="project-image">
+        <img src="assets/images/budgetwise.png" alt="Budget Wise homepage" class="project-image">
       </a>
     </div>
     <div class="section" id="contact-me">
